# FaceLocator

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  README.md  amplify.yml  architecture-simple.structurizr  architecture.structurizr  coverage.json  eslint.config.mjs  middleware.ts  next.config.ts  package.json  plan-faceLocator.prompt.md  playwright.config.ts  pnpm-lock.yaml  runbook.sh  vitest.config.ts
.github/: dependabot.yml
.husky/: pre-commit  pre-push
adr/: ADR-0001-aurora-serverless-phase1.md  ADR-0002-explicit-lambda-vpc-attachment.md  ADR-0003-endpoint-sg-consolidation.md  ADR-0004-remove-singleton-count-index-patterns.md  ADR-0005-phase5-docs-and-runbook-alignment.md  ADR-0006-security-hardening-and-cost-guardrail.md  ADR-0007-operationalize-phase6-controls.md  ADR-0008-defer-full-vpc-elimination.md  ADR-0009-release-gate-and-rollback-readiness.md
app/: error.tsx  globals.css  layout.tsx  page.module.css  page.tsx
apps/macos-uploader/src-tauri/: Cargo.toml  tauri.conf.json
apps/macos-uploader/src-tauri/capabilities/: default.json
apps/macos-uploader/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/macos-uploader/src-tauri/src/auth/: mod.rs
apps/macos-uploader/src-tauri/src/uploader/: backend.rs  events.rs  ingest.rs  mod.rs  preprocess.rs  session.rs  upload.rs
docs/: ARCHITECTURE-PUBLICATION-STRATEGY.md  ARCHITECTURE-SETUP-COMPLETE.md  aws-amplify-deployment.md  aws-database-boundary.md  aws-encryption.md  aws-iam-bootstrap.md  aws-nextjs-boundary.md  aws-operator-runbook.md  aws-poc-scope.md  aws-retention-and-delete.md  (+1 more)
(+250 files in other folders)
