[package]
name = "macos-uploader"
version = "0.1.0"
edition = "2021"

[lib]
name = "macos_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
kamadak-exif = "0.6.1"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
open = "5.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2.4.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.16"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
